[feature/animated-expand-collapse] Implemented sliding animation for time details expand/collapse. Need to investigate layout bugs on mobile devices

--- a/src/clock-screen/ClockScreen.module.css
+++ b/src/clock-screen/ClockScreen.module.css
@@ -33,6 +33,9 @@
 
 .timeRow {
   margin-top: auto;
+  
+  transform: translateY(0);
+  transition: var(--slide-transition);
 }
 
 .timeScreen {
